--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "exceljs": "^4.3.0",
     "fs": "^0.0.1-security",
     "json2xls": "^0.1.2",
+    "moment": "^2.29.4",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.1",
     "nodemon": "^3.0.1",
